return fixed predicted order if retries are depleted

--- a/test.ipynb
+++ b/test.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-16T14:47:44.604331Z",
-     "start_time": "2024-09-16T14:47:42.515004Z"
+     "end_time": "2024-10-23T12:27:41.283089Z",
+     "start_time": "2024-10-23T12:27:40.230754Z"
     }
    },
    "source": [
@@ -35,109 +35,135 @@
    ],
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[autoreload of utils_experiment failed: Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\HaveToCook\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\llm-comics-benchmark-PblQrPrn-py3.11\\Lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 276, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "    \n",
+      "  File \"C:\\Users\\HaveToCook\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\llm-comics-benchmark-PblQrPrn-py3.11\\Lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 500, in superreload\n",
+      "    update_generic(old_obj, new_obj)\n",
+      "    \n",
+      "  File \"C:\\Users\\HaveToCook\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\llm-comics-benchmark-PblQrPrn-py3.11\\Lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 397, in update_generic\n",
+      "    update(a, b)\n",
+      "    \n",
+      "  File \"C:\\Users\\HaveToCook\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\llm-comics-benchmark-PblQrPrn-py3.11\\Lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 309, in update_function\n",
+      "    setattr(old, name, getattr(new, name))\n",
+      "    \n",
+      "ValueError: run_reorder_task() requires a code object with 3 free vars, not 2396591751168\n",
+      "]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 118
+   "execution_count": 52
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-16T14:38:22.953737Z",
-     "start_time": "2024-09-16T14:38:22.467984Z"
+     "end_time": "2024-10-23T12:27:42.006015Z",
+     "start_time": "2024-10-23T12:27:41.514074Z"
     }
    },
    "cell_type": "code",
    "source": "set_semaphore(\"gpt-4\", 100)",
    "id": "b577547e516cfc41",
    "outputs": [],
-   "execution_count": 83
+   "execution_count": 53
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-16T14:38:23.558753Z",
-     "start_time": "2024-09-16T14:38:22.954754Z"
+     "end_time": "2024-10-23T12:27:42.500962Z",
+     "start_time": "2024-10-23T12:27:42.018083Z"
     }
    },
    "cell_type": "code",
    "source": "client = AsyncOpenAI()",
    "id": "a5c99c847108d759",
    "outputs": [],
-   "execution_count": 84
+   "execution_count": 54
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-16T14:43:15.135287Z",
-     "start_time": "2024-09-16T14:43:15.131378Z"
+     "end_time": "2024-10-23T12:27:42.549531Z",
+     "start_time": "2024-10-23T12:27:42.545134Z"
     }
    },
    "cell_type": "code",
    "source": "",
    "id": "8f425c0cc85f89ed",
    "outputs": [],
-   "execution_count": 103
+   "execution_count": null
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-16T14:38:24.809681Z",
-     "start_time": "2024-09-16T14:38:24.271098Z"
+     "end_time": "2024-10-23T12:27:43.067672Z",
+     "start_time": "2024-10-23T12:27:42.581747Z"
     }
    },
    "cell_type": "code",
    "source": "comics = os.listdir(\"data/xkcd\")",
    "id": "33d57d7d1dfa124f",
    "outputs": [],
-   "execution_count": 86
+   "execution_count": 55
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-16T14:38:27.604874Z",
-     "start_time": "2024-09-16T14:38:27.600838Z"
+     "end_time": "2024-10-23T12:27:43.098467Z",
+     "start_time": "2024-10-23T12:27:43.092855Z"
     }
    },
    "cell_type": "code",
    "source": "",
    "id": "614dce01f9e30cb1",
    "outputs": [],
-   "execution_count": 86
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "963d7af4d8cca50a"
+   "execution_count": null
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-16T14:49:05.805880Z",
-     "start_time": "2024-09-16T14:49:04.155924Z"
+     "end_time": "2024-10-23T12:27:43.118906Z",
+     "start_time": "2024-10-23T12:27:43.114591Z"
     }
    },
    "cell_type": "code",
-   "source": "comics_sample = random.sample(comics, 10)",
-   "id": "efdc98775f6d1c4c",
+   "source": "",
+   "id": "963d7af4d8cca50a",
    "outputs": [],
-   "execution_count": 122
+   "execution_count": null
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-16T14:49:32.881492Z",
-     "start_time": "2024-09-16T14:49:05.811891Z"
+     "end_time": "2024-10-23T12:27:43.727962Z",
+     "start_time": "2024-10-23T12:27:43.228474Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "comics_sample = random.sample(comics, 3)",
+   "id": "efdc98775f6d1c4c",
+   "outputs": [],
+   "execution_count": 56
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-23T12:27:49.532485Z",
+     "start_time": "2024-10-23T12:27:43.815534Z"
     }
    },
    "cell_type": "code",
@@ -150,7 +176,7 @@
     "            # model_name=\"gpt-4o\",\n",
     "            model_name=\"gpt-4o-mini\",\n",
     "        ) for comic in comics_sample\n",
-    "    ] \n",
+    "    ]\n",
     ")"
    ],
    "id": "8bc021f31aaad69a",
@@ -159,65 +185,58 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-09-16 19:49:11,281 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
-      "2024-09-16 19:49:12,253 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
-      "2024-09-16 19:49:12,406 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
-      "2024-09-16 19:49:12,647 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
-      "2024-09-16 19:49:12,743 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
-      "2024-09-16 19:49:13,627 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
-      "2024-09-16 19:49:13,659 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
-      "2024-09-16 19:49:13,850 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
-      "2024-09-16 19:49:14,714 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
-      "2024-09-16 19:49:32,867 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+      "2024-10-23 17:27:48,162 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "2024-10-23 17:27:48,491 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "2024-10-23 17:27:49,523 - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
      ]
     }
    ],
-   "execution_count": 123
+   "execution_count": 57
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-16T14:49:32.894157Z",
-     "start_time": "2024-09-16T14:49:32.885586Z"
+     "end_time": "2024-10-23T12:28:20.551524Z",
+     "start_time": "2024-10-23T12:28:20.546003Z"
     }
    },
    "cell_type": "code",
    "source": "",
    "id": "3a912fe1456c4447",
    "outputs": [],
-   "execution_count": 123
+   "execution_count": null
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-16T14:49:35.338521Z",
-     "start_time": "2024-09-16T14:49:32.899743Z"
+     "end_time": "2024-10-23T11:55:05.740810Z",
+     "start_time": "2024-10-23T11:13:23.820455Z"
     }
    },
    "cell_type": "code",
    "source": "metrics = [combined_normalized_loss(result[\"correct_order\"], result[\"predicted_order\"]) for result in results]",
    "id": "ff94f8fe9ca2b75a",
    "outputs": [],
-   "execution_count": 124
+   "execution_count": 26
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-16T14:49:37.736414Z",
-     "start_time": "2024-09-16T14:49:35.345540Z"
+     "end_time": "2024-10-23T11:55:05.741326700Z",
+     "start_time": "2024-10-23T11:13:24.340340Z"
     }
    },
    "cell_type": "code",
    "source": "avg_metric = sum(metrics) / len(metrics)",
    "id": "2794668834791edf",
    "outputs": [],
-   "execution_count": 125
+   "execution_count": 27
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-16T14:49:40.539444Z",
-     "start_time": "2024-09-16T14:49:37.740431Z"
+     "end_time": "2024-10-23T11:55:05.741326700Z",
+     "start_time": "2024-10-23T11:13:24.582958Z"
     }
    },
    "cell_type": "code",
@@ -227,44 +246,51 @@
     {
      "data": {
       "text/plain": [
-       "0.3991666666666666"
+       "0.0"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 126
+   "execution_count": 28
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-16T14:49:43.505498Z",
-     "start_time": "2024-09-16T14:49:40.547692Z"
+     "end_time": "2024-10-23T11:55:05.742344700Z",
+     "start_time": "2024-10-23T11:13:30.201898Z"
     }
    },
    "cell_type": "code",
-   "source": "results[9]",
+   "source": "results[8], metrics[8]",
    "id": "13e12a223ec537fb",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'panels_path': 'data/xkcd/1090-FormalLanguages.jpg',\n",
-       " 'imgs_original': ['panel_1.jpg', 'panel_0.jpg', 'panel_2.jpg'],\n",
-       " 'imgs_predicted': ['panel_0.jpg', 'panel_1.jpg', 'panel_2.jpg'],\n",
-       " 'correct_order': [1, 0, 2],\n",
-       " 'predicted_order': [1, 0, 2],\n",
-       " 'reasoning': '1. In the first panel, a stick figure enthusiastically shouts \"GRAMMAR!\" while another figure looks on, suggesting a focus on language or grammar-related content.  \\n2. The second panel shows a chaotic scene where the same stick figure crashes into the setting of a symposium, indicating a sudden disruption.  \\n3. The third panel depicts the second figure still at the podium, seemingly unfazed, while the first figure runs away, suggesting a humorous or absurd reaction to the situation.  \\n\\nThe overall narrative seems to revolve around a grammar enthusiast who disrupts a formal event (the symposium) with their excitement about grammar. The first panel sets the stage for the enthusiasm, the second panel introduces chaos with the crash, and the third panel shows the aftermath, where the enthusiast has run off, leaving the other figure bewildered. This sequence creates a comedic effect, highlighting the absurdity of the situation.\\n\\nThe correct order of the panels is'}"
+       "({'panels_path': 'data/xkcd/502-DarkFlow.jpg',\n",
+       "  'imgs_original': ['panel_2.jpg',\n",
+       "   'panel_1.jpg',\n",
+       "   'panel_3.jpg',\n",
+       "   'panel_0.jpg'],\n",
+       "  'imgs_predicted': ['panel_2.jpg',\n",
+       "   'panel_0.jpg',\n",
+       "   'panel_1.jpg',\n",
+       "   'panel_3.jpg'],\n",
+       "  'correct_order': [3, 1, 0, 2],\n",
+       "  'predicted_order': [0, 3, 1, 2],\n",
+       "  'reasoning': '1. The character is sitting at a computer, seemingly pondering a question, which sets a contemplative tone.\\n2. A humorous response is given to a scientific hypothesis, indicating a casual conversation about cosmic phenomena with a playful jab.\\n3. A character expresses longing for their mother while humorously suggesting she should \"pull harder,\" implying a connection to the cosmos.\\n4. The character at the computer references a scientific paper about galaxies being pulled toward a specific area, suggesting a serious discussion about astrophysics.\\n\\nThe overall narrative begins with a character pondering a question (panel 1), leading to a discussion about a scientific paper (panel 4). This conversation takes a humorous turn with a playful remark about a mother (panel 2), and it culminates in a heartfelt moment where a character expresses missing their mother while humorously tying it back to the cosmos (panel 3). The progression moves from contemplation to scientific discussion, then humor, and finally a personal sentiment.\\n\\nThe correct order of the panels is'},\n",
+       " 0.0)"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 127
+   "execution_count": 29
   },
   {
    "metadata": {
@@ -280,12 +306,38 @@
    "execution_count": 127
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-23T11:19:34.386761Z",
+     "start_time": "2024-10-23T11:19:34.255166Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "9348056bacfa1d5f"
+   "source": [
+    "true_order = [0, 1, 2, 3]\n",
+    "classified_order = [3, 2, 1, 0]\n",
+    "n = len(true_order)\n",
+    "lcs_len = lcs_length(true_order, classified_order)\n",
+    "lcs_loss = 1 - (lcs_len / n)\n",
+    "\n",
+    "# Calculate BSD\n",
+    "bsd = bubble_sort_distance(true_order, classified_order)\n",
+    "max_bsd = n * (n - 1) / 2\n",
+    "bsd_loss = bsd / max_bsd\n",
+    "\n",
+    "print(lcs_loss, bsd_loss)"
+   ],
+   "id": "9348056bacfa1d5f",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.75 1.0\n"
+     ]
+    }
+   ],
+   "execution_count": 35
   },
   {
    "metadata": {},
